home.css fixed overflow //rohit

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
    .container{
+    min-width: 900px;
     width: 90vw;
     height: 90vh;
     box-shadow: -4px 4px 20px -1px rgba(0,0,0,0.75);
@@ -17,7 +18,7 @@
         display: flex;
         justify-content: center;
         .table{
-            width: 70em;
+            width: 95%;
             .tableRow{
               .tableHead{
                 font-size: 1.5em;
